# scrcpy-gui

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: ControlPanel.tsx  ErrorBoundary.tsx  Footer.tsx  Header.tsx  LogPanel.tsx  SessionBehavior.tsx  ShortcutsPanel.tsx  Sidebar.tsx  Tooltip.tsx
src/components/__tests__/: Sidebar.test.tsx
src/hooks/: useScrcpy.ts
