[package]
name = "scrcpy-gui-v3"
version = "3.1.0"
authors = ["KB-kil0bit"]
description = "A modern GUI for Scrcpy written in React and Rust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "scrcpy_gui_v3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
zip = "7.4.0"
flate2 = "1.0"
tar = "0.4"
tokio = { version = "1.49.0", features = ["full"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.6.0"
chrono = "0.4.43"

